[FEAT] Change password without code verification
